exports[`consistent-return > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "missingReturnValue",
      "message": "Function 'foo' expected a return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 16
        },
        "end": {
          "line": 4,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "unexpectedReturnValue",
      "message": "Function 'foo' expected no return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 11
        },
        "end": {
          "line": 6,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "unexpectedReturnValue",
      "message": "Function 'foo' expected no return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 7,
          "column": 11
        },
        "end": {
          "line": 7,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "missingReturnValue",
      "message": "Function 'foo' expected a return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 11
        },
        "end": {
          "line": 5,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "unexpectedReturnValue",
      "message": "Function 'baz' expected no return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 6,
          "column": 13
        },
        "end": {
          "line": 6,
          "column": 30
        }
      }
    },
    {
      "ruleName": "consistent-return",
      "messageId": "missingReturnValue",
      "message": "Function 'bar' expected a return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 9,
          "column": 11
        },
        "end": {
          "line": 9,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "missingReturnValue",
      "message": "Function 'foo' expected a return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 16
        },
        "end": {
          "line": 4,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "unexpectedReturnValue",
      "message": "Async function 'foo' expected no return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 16
        },
        "end": {
          "line": 4,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "missingReturnValue",
      "message": "Async function 'foo' expected a return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 16
        },
        "end": {
          "line": 4,
          "column": 23
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "unexpectedReturnValue",
      "message": "Async function 'foo' expected no return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 11
        },
        "end": {
          "line": 4,
          "column": 20
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "unexpectedReturnValue",
      "message": "Function 'foo' expected no return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 16
        },
        "end": {
          "line": 4,
          "column": 31
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`consistent-return > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "consistent-return",
      "messageId": "missingReturnValue",
      "message": "Function 'foo' expected a return value.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 7,
          "column": 11
        },
        "end": {
          "line": 7,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
